Access.log added to file, task 1 of section 3 completed - print last 10 lines of file to terminal

--- a/Makefile_3
+++ b/Makefile_3
@@ -20,5 +20,7 @@ clean:
 	rm -rf ./build && mkdir -p build/lib
 
 # Run the solution (FYI: we could make run dependent on link)
+# Print last 10 lines of the file
 run-task-1:
+	@tail -n  10 access.log
 
