Pipe output of command that gets green hex to custom programme

--- a/Makefile_2
+++ b/Makefile_2
@@ -33,5 +33,8 @@ clean:
 run-task-1:
 	$(call get_valid)
 
+# Pipe ouput of get_valid
+#	Loop through each value and print the 4th and 5th character using the head and tail UNIX tools
+#	When loop is finished pipe the output to custom program that will convert green hex value to decimal and print the result as comma separated list
 run-task-2:
-	$(call get_valid) | while read line; do printf $$line | head -c 4 | tail -c 1 && printf $$line | head -c 5 | tail -c 1 && printf ","; done && printf "\n"
+	$(call get_valid) | while read line; do printf $$line | head -c 4 | tail -c 1 && printf $$line | head -c 5 | tail -c 1 && printf "\n"; done | ./build/main
