--- a/Makefile_2
+++ b/Makefile_2
@@ -13,6 +13,18 @@ define get_valid
 	@cat colours.txt | while read line; do if [ `echo -n $$line | wc -c` = 7 ] || [ `echo -n $$line | wc -c` = 9 ] ; then echo $$line ; fi ; done
 endef
 
+define get_red
+	$(call get_valid) |  while read line; do printf $$line | head -c 2 | tail -c 1 && printf $$line | head -c 3 | tail -c 1 && printf "\n"; done
+endef
+
+define get_green
+	$(call get_valid) |  while read line; do printf $$line | head -c 4 | tail -c 1 && printf $$line | head -c 5 | tail -c 1 && printf "\n"; done
+endef
+
+define get_blue
+	$(call get_valid) |  while read line; do printf $$line | head -c 6 | tail -c 1 && printf $$line | head -c 7 | tail -c 1 && printf "\n"; done
+endef
+
 # This target is the final compile and depends on other targets
 link: ${OBJECTS}
 	${CC} $^ -o build/convert
@@ -38,3 +50,6 @@ run-task-1:
 #	When loop is finished pipe the output to custom program that will convert green hex value to decimal and print the result as comma separated list
 run-task-2:
 	$(call get_valid) | while read line; do printf $$line | head -c 4 | tail -c 1 && printf $$line | head -c 5 | tail -c 1 && printf "\n"; done | ./build/convert
+
+run-task-3:
+	$(call get_blue)
