Change add spaces function to work with 8 digit hex

--- a/Makefile_2
+++ b/Makefile_2
@@ -22,7 +22,7 @@ endef
 # Function which will add spaces between characters in string
 # Loops through each line and makes use of head and tail Unix tools
 define add_spaces
-	while read line; do echo $$line | head -c2 && printf " " && printf " "| echo $$line | head -c4 | tail -c2 && printf " " && echo $$line | head -c6 | tail -c2 && printf "\n"; done
+	while read line; do echo $$line | head -c2 && printf " " && printf " "| echo $$line | head -c4 | tail -c2 && printf " " && echo $$line | head -c6 | tail -c2 && printf " " && echo $$line | head -c8 | tail -c2 && printf "\n"; done
 endef
 
 # This target is the final compile and depends on other targets
@@ -52,5 +52,8 @@ run-task-2:
 	@$(call get_valid) |  while read line; do printf $$line | head -c 4 | tail -c 1 && printf $$line | head -c 5 | tail -c 1 && printf "\n"; done | ./build/convert
 
 # Remove the first character and pipe the output to add spaces
+# Pipe the output and loop through each line
+# If the length of the string is 6 the call the add spaces function for 6 digit hex
+# If the length of the string is 8 then call the add spaces function for 8 digit hex
 run-task-3:
 	@$(call remove_first) | $(call add_spaces)
