Retrieve all process times

--- a/Makefile_3
+++ b/Makefile_3
@@ -35,3 +35,7 @@ run-task-3:
 #	Run fourth solution in third section
 run-task-4:
 	@grep 'Windows' access.log > access.ie.log
+
+run-task-5:
+	#@grep "5" access.log | cut -d ' ' -f7
+	cat access.log | cut -d ' ' -f7
